<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.OtpFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_enter_otp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/margin_top_medium"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_small"
        android:text="@string/otp_message"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@id/otp_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otp_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/margin_top_small"
        app:boxBackgroundMode="none"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_otp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/margin_top_small"
            android:background="@drawable/gradient_background"
            android:gravity="center_vertical"
            android:hint="@string/otp"
            android:inputType="number"
            android:maxLines="1"
            android:padding="@dimen/padding_small"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_verify_otp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/margin_top_medium"
        android:background="@drawable/gradient_background"
        android:text="@string/verify_otp"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp_container" />


</androidx.constraintlayout.widget.ConstraintLayout>