<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ui.signup.SignUpFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        app:boxBackgroundMode="none"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/gradient_background"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/padding_large"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/margin_top_medium"
        app:boxBackgroundMode="none"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_container"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/gradient_background"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="@dimen/padding_small"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/margin_top_medium"
        app:boxBackgroundMode="none"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_container"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/gradient_background"
            android:gravity="center_vertical"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="@dimen/padding_small"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/margin_top_medium"
        android:background="@drawable/gradient_background"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_container" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_medium"
        android:letterSpacing="0.1"
        android:text="@string/have_an_account_login"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_next" />

</androidx.constraintlayout.widget.ConstraintLayout>