<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/default_horizontal_padding">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_medium"
            android:text="@string/login"
            android:textSize="@dimen/login_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_enter_info_for_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_enter_info_for_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_info_for_login"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/email_container"
            app:layout_constraintStart_toStartOf="@id/tv_login"
            app:layout_constraintTop_toBottomOf="@id/tv_login" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_medium"
            app:boxBackgroundMode="none"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/password_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_enter_info_for_login"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_info_for_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:background="@drawable/gradient_background"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:letterSpacing="0.1"
                android:padding="@dimen/padding_small"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/default_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_medium"
            app:boxBackgroundMode="none"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_container"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:background="@drawable/gradient_background"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:letterSpacing="0.1"
                android:maxLines="1"
                android:padding="@dimen/padding_small"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/default_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbx_remember_me"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/margin_top_small"
            android:letterSpacing="0.1"
            android:text="Remember me"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="@+id/password_container"
            app:layout_constraintTop_toBottomOf="@+id/password_container" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:text="Forgot Password?"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/cbx_remember_me"
            app:layout_constraintEnd_toEndOf="@id/cbx_remember_me"
            app:layout_constraintTop_toTopOf="@+id/cbx_remember_me" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/margin_top_small"
            android:background="@drawable/gradient_background"
            android:letterSpacing="0.1"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintEnd_toEndOf="@id/tv_forgot_password"
            app:layout_constraintStart_toStartOf="@id/cbx_remember_me"
            app:layout_constraintTop_toBottomOf="@+id/cbx_remember_me" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_medium"
            android:letterSpacing="0.1"
            android:text="@string/no_account_sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
